package com.st.projectst.model.game;

import com.googlecode.lanterna.graphics.TextGraphics;
import com.st.projectst.model.Position;

public class Door extends GameObject {
    public Door(Position position) {
        super(position);
    }
}
