package com.st.projectst.model.game;

import com.googlecode.lanterna.graphics.TextGraphics;
import com.st.projectst.model.Position;
import com.st.projectst.model.game.GameObject;

public class Key extends GameObject {
    public Key(Position position) {
        super(position);
    }
}
