package com.st.projectst.model.game;

import com.st.projectst.model.Position;

public class Potion extends GameObject{
    public Potion(Position position) {
        super(position);
    }
}
